--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.24.0",
     "cheerio": "^1.0.0-rc.10",
     "express": "^4.17.2",
+    "express-handlebars": "^6.0.2",
     "request": "^2.88.2"
   }
 }
