--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
