--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "axios": "^0.24.0",
     "cheerio": "^1.0.0-rc.10",
+    "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "mongodb": "^4.3.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
