--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "mongodb": "^4.3.0",
+    "node-schedule": "^2.1.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
